--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Fin primer header*/ -->
 
-    <section class="presentacion">
+    <section class="presentacion" id="presentation">
         <div class ="div-presentacion">
             <aside class="aside-presentacion">
                 <h2 class="h2-presentacion">¡Hola! Soy</h2>
@@ -98,7 +98,7 @@
         </div>
         <div class="caja-proyectos" >
             <div class="caja-proyectos-dentro">
-                <img class="img-proyecto" src="./imagenes/undraw_Designer_by46.svg" alt="">
+                <img class="img-proyecto" src="./imagenes/captura-portfolio.PNG" alt="">
                 <p class="proyect-name">proyecto 1 </p>
             </div>
             <div class="caja-proyectos-dentro">
@@ -135,11 +135,11 @@
                     <i class="devicon-twitter-plain twitter-contacto"></i>
                     <h3 class="h3-icono">@Adalovelace</h3>
                 </a>
-                <a class="contactame-link" href="https://github.com/barbifranco22">
+                <a class="contactame-link" href="https://github.com/barbifranco22"target="_blank">
                     <i class="devicon-github-plain github-contacto"></i>
                     <h3 class="h3-icono">barbifranco22</h3>
                 </a>
-                <a class="contactame-link" href="https://www.linkedin.com/in/barbaravillalbafranco">
+                <a class="contactame-link" href="https://www.linkedin.com/in/barbaravillalbafranco"target="_blank">
                     <i class="devicon-linkedin-plain linkedin-contacto"></i>
                     <h3 class="h3-icono">Barbara Villalba</h3>
                 </a>
@@ -183,10 +183,10 @@
         <div class="footer-content">
 
             <nav class="nav-footer">
-                <li class="li-nav-footer"><a class= "a-nav-footer" href="#">Hola</a></li>
-                <li class="li-nav-footer"><a class= "a-nav-footer" href="#">Conocimientos</a></li>
-                <li class="li-nav-footer"><a class= "a-nav-footer" href="#">Proyectos</a></li>
-                <li class="li-nav-footer"><a class= "a-nav-footer" href="#">Contacto</a></li>
+                <li class="li-nav-footer"><a class= "a-nav-footer" href="#presentation">Hola</a></li>
+                <li class="li-nav-footer"><a class= "a-nav-footer" href="#knowledge">Conocimientos</a></li>
+                <li class="li-nav-footer"><a class= "a-nav-footer" href="#projects">Proyectos</a></li>
+                <li class="li-nav-footer"><a class= "a-nav-footer" href="#idcontact">Contacto</a></li>
             </nav>
 
             <nav class="nav-footer-icon">
@@ -194,11 +194,14 @@
                 <li class="li-nav-icon-footer"><a class="a-icon-footer"  href="#">
                     <i class="devicon-twitter-plain twitter-footer "></i></a>
                 </li>
-                <li class="li-nav-icon-footer"><a class="a-icon-footer"  href="#">
+                <li class="li-nav-icon-footer"><a class="a-icon-footer"  href="https://github.com/barbifranco22" target="_blank">
                     <i class="devicon-github-plain github-footer"></i></a>
                 </li>
-                <li class="li-nav-icon-footer"><a class="a-icon-footer"  href="#">
+                <li class="li-nav-icon-footer"><a class="a-icon-footer"  href="https://www.linkedin.com/in/barbaravillalbafranco" target="_blank">
                     <i class="devicon-linkedin-plain linkedin-footer "></i></a>
+                </li>
+                <li class="li-nav-icon-footer"><a class="a-icon-footer" href="#">
+                    <i class="far fa-envelope-open email-icon mail-footer"></i></a>
                 </li>
     
             </nav>
