--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 <body>
     <header class="header">
+        <input class="input-btn-menu" type="checkbox" id="btn-menu">
+        <label class="label-btn-menu" for="btn-menu"> <i class="fas fa-bars hamburguesa"></i> </label>
         <nav class="nav-header">
             <li class="li-header"><a class="a-nav-header" href="#">Hola</a></li>
             <li class="li-header"><a class="a-nav-header" href="#knowledge">Conocimientos</a></li>
@@ -206,7 +208,7 @@
     
             </nav>
 
-            <p class="text-footer">Hecho con ♥ por Barbara Villalba</p>
+            <p class="text-footer">Hecho con <span>♥</span> por Barbara Villalba</p> 
 
         </div>
     </footer>
