--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <i class="devicon-linkedin-plain linkedin-contacto"></i>
                     <h3 class="h3-icono">Barbara Villalba</h3>
                 </a>
-                <a class="contactame-link" href="#">
+                <a class="contactame-link" href="mailto:barbara.villalbaf@hotmail.com">
                     <i class="far fa-envelope-open email-icon mail-contacto"></i>
                     <h3 class="h3-icono">barbara.villalbaf@hotmail.com</h3>
                 </a>
@@ -201,7 +201,7 @@
                 <li class="li-nav-icon-footer"><a class="a-icon-footer"  href="https://www.linkedin.com/in/barbaravillalbafranco" target="_blank">
                     <i class="devicon-linkedin-plain linkedin-footer "></i></a>
                 </li>
-                <li class="li-nav-icon-footer"><a class="a-icon-footer" href="#">
+                <li class="li-nav-icon-footer"><a class="a-icon-footer" href="mailto:barbara.villalbaf@hotmail.com">
                     <i class="far fa-envelope-open email-icon mail-footer"></i></a>
                 </li>
     
