--- a/index.html
+++ b/index.html
@@ -129,53 +129,64 @@
     <!-- fin proyectos -->
 
     <section class="contacto">
-        <div class="contactame">
-            <h1 class="h1contactame">Contactame</h1>
-            <p class="pcontactame">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto voluptatibus repellat quos vel doloremque quidem alias accusamus eaque tenetur ipsa iste eos, dolor inventore cumque a nulla quibusdam consectetur magnam!</p>
-            <div class="caja-iconos">
-                <a class="contactame-link" href="#">
-                    <i class="devicon-twitter-plain twitter-contacto"></i>
-                    <h3 class="h3-icono">@Adalovelace</h3>
-                </a>
-                <a class="contactame-link" href="https://github.com/barbifranco22"target="_blank">
-                    <i class="devicon-github-plain github-contacto"></i>
-                    <h3 class="h3-icono">barbifranco22</h3>
-                </a>
-                <a class="contactame-link" href="https://www.linkedin.com/in/barbaravillalbafranco"target="_blank">
-                    <i class="devicon-linkedin-plain linkedin-contacto"></i>
-                    <h3 class="h3-icono">Barbara Villalba</h3>
-                </a>
-                <a class="contactame-link" href="mailto:barbara.villalbaf@hotmail.com">
-                    <i class="far fa-envelope-open email-icon mail-contacto"></i>
-                    <h3 class="h3-icono">barbara.villalbaf@hotmail.com</h3>
-                </a>
-            </div>
-        </div>
+        <div class="box-contacto">
 
-        <div class="contactame-form" id="idcontact">
-            <h1 class="h1-contactame">Escribeme</h1>
-            <form class="contactame-form-completar" action="">
-                <ul class="form-list">
-                    <li class="li-form">
-                        <div class="div-label"><label for="name">Nombre:</label></div>
-                        <input  type="text" id="name"  placeholder="Ingresa tu nombre">
-                    </li>
-                    <li class="li-form"> 
-                        <div class="div-label"><label for="name">Apellido:</label></div>
-                        <input  type="text" id="surname"  placeholder="Ingresa tu apellido">   
-                        </li>  
-                    <li class="li-form">
-                        <div class="div-label"><label for="mail">Correo electrónico:</label></div>
-                        <input  type="email" id="mail"  placeholder="Ingresa tu email">
-                    </li>
-                    <li class="li-form">
-                        <div class="div-label"><label for="msg">Mensaje:</label></div>
-                        <textarea id="msg" placeholder="Ingresa tu texto" minlength="10" maxlength="150" required></textarea>
-                    </li>
+            <div class="contactame">
+                <h1 class="h1contactame">Contactame</h1>
+                <p class="pcontactame">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto voluptatibus repellat quos vel doloremque quidem alias accusamus eaque tenetur ipsa iste eos, dolor inventore cumque a nulla quibusdam consectetur magnam!</p>
+               <ul class="contactame-box">
+                   <li class="contactame-list">
+                        <a class="contactame-link" href="#">
+                        <i class="devicon-twitter-plain twitter-contacto"></i>
+                        <h3 class="h3-icono">@Adalovelace</h3>
+                        </a>
+                   </li>
+                   <li class="contactame-list">
+                        <a class="contactame-link" href="https://github.com/barbifranco22"target="_blank">
+                        <i class="devicon-github-plain github-contacto"></i>
+                        <h3 class="h3-icono">barbifranco22</h3>
+                        </a>
+                   </li>
+                   <li class="contactame-list">
+                        <a class="contactame-link" href="https://www.linkedin.com/in/barbaravillalbafranco"target="_blank">
+                        <i class="devicon-linkedin-plain linkedin-contacto"></i>
+                        <h3 class="h3-icono">Barbara Villalba</h3>
+                        </a>
+                   </li>
+                   <li class="contactame-list">
+                        <a class="contactame-link" href="mailto:barbara.villalbaf@hotmail.com">
+                        <i class="far fa-envelope-open email-icon mail-contacto"></i>
+                        <h3 class="h3-icono">barbara.villalbaf@hotmail.com</h3>
+                        </a>
+                   </li>
                 </ul>
-            </form>
-            <button class="contactame-button">Enviar</button>
-        </div>
+            </div>
+                
+            <div class="formulario">
+                <h1 class="h1-contactame">Escribeme</h1>
+                <form class="contactame-form-completar" action="">
+                    <ul class="form-list">
+                        <li class="li-form">
+                            <div class="div-label"><label for="name">Nombre:</label></div>
+                            <input  type="text" id="name"  placeholder="Ingresa tu nombre">
+                        </li>
+                        <li class="li-form"> 
+                            <div class="div-label"><label for="name">Apellido:</label></div>
+                            <input  type="text" id="surname"  placeholder="Ingresa tu apellido">   
+                        </li>  
+                        <li class="li-form">
+                            <div class="div-label"><label for="mail">Correo electrónico:</label></div>
+                            <input  type="email" id="mail"  placeholder="Ingresa tu email">
+                        </li>
+                        <li class="li-form">
+                            <div class="div-label"><label for="msg">Mensaje:</label></div>
+                            <textarea id="msg" placeholder="Ingresa tu texto" minlength="10" maxlength="150" required></textarea>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            
+        </div>     
     </section>
 
     <!-- fin contactame -->
