--- a/index.html
+++ b/index.html
@@ -101,27 +101,27 @@
         <div class="caja-proyectos" >
             <div class="caja-proyectos-dentro">
                 <img class="img-proyecto" src="./imagenes/captura-portfolio.PNG" alt="">
-                <p class="proyect-name">proyecto 1 </p>
+                <p class="proyect-name">Portfolio </p>
             </div>
             <div class="caja-proyectos-dentro">
                 <img class="img-proyecto" src="./imagenes/undraw_game_day_ucx9.svg" alt="">
-                <p class="proyect-name">proyecto 2 </p>
+                <p class="proyect-name">Día de Juego </p>
             </div>
             <div class="caja-proyectos-dentro">
                 <img class="img-proyecto" src="./imagenes/undraw_Meditation_o89g.svg" alt="">
-                <p class="proyect-name">proyecto 3 </p>
+                <p class="proyect-name">Meditación </p>
             </div>
             <div class="caja-proyectos-dentro">
                 <img class="img-proyecto" src="./imagenes/undraw_Organizing_projects_0p9a.svg" alt="">
-                <p class="proyect-name">proyecto 4 </p>
+                <p class="proyect-name">Organizador de proyectos </p>
             </div>
             <div class="caja-proyectos-dentro">
                 <img class="img-proyecto" src="./imagenes/undraw_reading_time_gvg0.svg" alt="">
-                <p class="proyect-name">proyecto 5 </p>
+                <p class="proyect-name">Momento de lectura </p>
             </div>
             <div class="caja-proyectos-dentro">
                 <img class="img-proyecto" src="./imagenes/undraw_Scrum_board_re_wk7v.svg" alt="">
-                <p class="proyect-name">proyecto 6 </p>
+                <p class="proyect-name">Tablero Scrum</p>
             </div>
         </div>
     </section>
@@ -133,7 +133,7 @@
 
             <div class="contactame">
                 <h1 class="h1contactame">Contactame</h1>
-                <p class="pcontactame">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto voluptatibus repellat quos vel doloremque quidem alias accusamus eaque tenetur ipsa iste eos, dolor inventore cumque a nulla quibusdam consectetur magnam!</p>
+                <p class="pcontactame">Contactame para que podamos hablar de tus ideas! </p>
                <ul class="contactame-box">
                    <li class="contactame-list">
                         <a class="contactame-link" href="#">
@@ -183,7 +183,13 @@
                             <textarea id="msg" placeholder="Ingresa tu texto" minlength="10" maxlength="150" required></textarea>
                         </li>
                     </ul>
+                    <button class="button-form">
+                        <p class="button-text">
+                            ENVIAR
+                        </p>
+                    </button>
                 </form>
+                
             </div>
             
         </div>     
