--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
     <title>portfolio</title>
 </head>
 <body>
-    <header class="header">
-        <input class="input-btn-menu" type="checkbox" id="btn-menu">
-        <label class="label-btn-menu" for="btn-menu"> <i class="fas fa-bars hamburguesa"></i> </label>
+    <header class="header">       
         <nav class="nav-header">
-            <li class="li-header"><a class="a-nav-header" href="#">Hola</a></li>
-            <li class="li-header"><a class="a-nav-header" href="#knowledge">Conocimientos</a></li>
-            <li class="li-header"><a class="a-nav-header" href="#projects">Proyectos</a></li>
-            <li class="li-header-contacto"><a class="a-nav-header-contacto" href="#idcontact">Contacto</a></li>
+            <div class="div-header">
+                <li class="li-header"><a class="a-nav-header" href="#">Hola</a></li>
+                <li class="li-header"><a class="a-nav-header" href="#knowledge">Conocimientos</a></li>
+                <li class="li-header"><a class="a-nav-header" href="#projects">Proyectos</a></li>
+                <li class="li-header-contacto"><a class="a-nav-header-contacto" href="#idcontact">Contacto</a></li>
+            </div>
+            <ul class="ul-header-icon">
+                <li class="li-header-icon"> <i class="fas fa-bars"></i></li>
+            </ul>
         </nav>
+        
     </header>
 
     <!-- Fin primer header*/ -->
