--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
 
     <section class="presentacion" id="presentation">
         <div class ="div-presentacion">
-            <aside class="aside-presentacion">
+            <div class="text-presentacion">
                 <h2 class="h2-presentacion">¡Hola! Soy</h2>
                 <h1 class="h1-presentacion">Barbara Villalba</h1>
                 <p class="p-presentacion"> Desarrolladora y amante de mi perra Lupita</p>
-                <a class="a-button-presentacion" href=""><button class="button-presentacion">Lo que hago</button></a>
-            </aside>
+                <button class="button-presentacion">
+                    <a class="a-button-presentacion" href="#">
+                        <p class="text-button">Lo que hago</p></a>
+                </button>
+            </div>
             <figure class="figure-presentacion">
-                <img class="img-presentacion" src="./imagenes/imagenpresentacion.svg" alt="">
+                <img class="img-presentacion" src="./imagenes/undraw_mindfulness_scgo.svg" alt="">
             </figure>
         </div>
     </section>
@@ -50,36 +53,40 @@
     <!-- Fin Presentacion -->
 
     <section class="mis-conocimientos" id="knowledge">
-        <div class="div-mis-conocimientos">
-            <h1 class="titulo-mis-conocimientos">Mis conocimientos</h1>
-            <p class="p-mis-conocimientos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni perspiciatis obcaecati quos tenetur quo ex cupiditate corrupti eveniet.</p>
+        <div class="conocimientos-container">
+
+            <div class="div-mis-conocimientos">
+                <h1 class="titulo-mis-conocimientos">Mis conocimientos</h1>
+                <p class="p-mis-conocimientos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni perspiciatis obcaecati quos tenetur quo ex cupiditate corrupti eveniet.</p>
+            </div>
+            <div class="conocimiento">
+                <div class="minibox">
+                    <i class="devicon-html5-plain-wordmark colored iconoss"></i>
+                    <p class="p-icono">HTML5</p>
+                </div>
+                <div class="minibox">
+                    <i class="devicon-css3-plain-wordmark colored iconoss"></i>
+                    <p class="p-icono">CSS3</p>
+                </div>
+                <div class="minibox">
+                    <i class="devicon-sass-original colored iconoss"></i>
+                    <p class="p-icono">SASS</p>
+                </div>
+                <div class="minibox">
+                    <i class="devicon-javascript-plain colored iconoss"></i>
+                    <p class="p-icono">JAVASCRIPT</p>
+                </div>
+                <div class="minibox">
+                    <i class="devicon-react-original-wordmark colored iconoss"></i>
+                    <p class="p-icono">REACT</p>
+                </div>
+                <div class="minibox">
+                    <i class="devicon-git-plain colored iconoss"></i>
+                    <p class="p-icono">GIT</p>
+                </div>
+            </div>
         </div>
-        <div class="conocimiento">
-            <div class="minibox">
-                <i class="devicon-html5-plain-wordmark colored iconoss"></i>
-                <p class="p-icono">HTML5</p>
-            </div>
-            <div class="minibox">
-                <i class="devicon-css3-plain-wordmark colored iconoss"></i>
-                <p class="p-icono">CSS3</p>
-            </div>
-            <div class="minibox">
-                <i class="devicon-sass-original colored iconoss"></i>
-                <p class="p-icono">SASS</p>
-            </div>
-            <div class="minibox">
-                <i class="devicon-javascript-plain colored iconoss"></i>
-                <p class="p-icono">JAVASCRIPT</p>
-            </div>
-            <div class="minibox">
-                <i class="devicon-react-original-wordmark colored iconoss"></i>
-                <p class="p-icono">REACT</p>
-            </div>
-            <div class="minibox">
-                <i class="devicon-git-plain colored iconoss"></i>
-                <p class="p-icono">GIT</p>
-            </div>
-        </div>
+        
     </section>
 
     <!-- Fin conocimientos -->
