--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1 class="h1-presentacion">Barbara Villalba</h1>
                 <p class="p-presentacion"> Desarrolladora y amante de mi perra Lupita</p>
                 <button class="button-presentacion">
-                    <a class="a-button-presentacion" href="#">
+                    <a class="a-button-presentacion" href="#projects">
                         <p class="text-button">Lo que hago</p></a>
                 </button>
             </div>
@@ -107,11 +107,11 @@
     <section class="proyectos" id="projects"> 
         <div class="mis-proyectos">
             <h1 class="mis-proyectos-title">Mis proyectos</h1>
-            <p class="pmisproyectos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, vero atque temporibus amet odio aperiam tempore adipisci molestias expedita blanditiis velit at, iste, quisquam ex cupiditate delectus cum aut alias.</p>
+            <p class="pmisproyectos">A continuación, vas a poder acceder a todos los proyectos que realicé en el curso de FrontEnd.</p>
         </div>
         <div class="caja-proyectos" >
             <div class="caja-proyectos-dentro">
-                <img class="img-proyecto" src="./imagenes/captura-portfolio.PNG" alt="">
+                <img class="img-proyecto" src="./imagenes/proyecto-portfolio.PNG" alt="">
                 <p class="proyect-name">Portfolio </p>
             </div>
             <div class="caja-proyectos-dentro">
