--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="conocimientos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,800;1,600&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./imagenes/undraw_Meditation_o89g.svg" type="">
     <title>portfolio</title>
 </head>
 <body>
@@ -61,7 +62,7 @@
 
             <div class="div-mis-conocimientos">
                 <h1 class="titulo-mis-conocimientos">Mis conocimientos</h1>
-                <p class="p-mis-conocimientos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni perspiciatis obcaecati quos tenetur quo ex cupiditate corrupti eveniet.</p>
+                <p class="p-mis-conocimientos">A continuación, detallo los conocimientos adquiridos en a cursada de FrontEnd en ADA.</p>
             </div>
             <div class="conocimiento">
                 <div class="minibox">
